Removed LLMWrapper and made it LLM agnostic

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,9 +3,8 @@ transformers
 sentence-transformers
 simpledorff
 pandas
-numpy
-openai
+bumpy
 seaborn
 matplotlib
 plotly
-sentencepiece
+sentencepiece 
